fixed images not showing up

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -148,20 +148,12 @@ ul {
     padding-bottom: 1rem;
 }
 
-
-.theme-toggle {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    margin-left: 1rem;
-}
-
 .theme-toggle input {
-    width: 40px;
-    height: 20px;
+    width: 2.5rem;       
+    height: 1.25rem;      
     appearance: none;
     background: var(--bg-secondary);
-    border-radius: 20px;
+    border-radius: 1.25rem;
     position: relative;
     cursor: pointer;
     outline: none;
@@ -170,28 +162,28 @@ ul {
 .theme-toggle input::before {
     content: "";
     position: absolute;
-    width: 16px;
-    height: 16px;
+    width: 1rem;        
+    height: 1rem;        
     background: var(--text-heading);
     border-radius: 50%;
-    top: 2px;
-    left: 2px;
-    transition: 0.2s;
+    top: 0.125rem;        
+    left: 0.125rem;      
+    transition: transform 0.2s ease;
 }
 
 .theme-toggle input:checked::before {
-    transform: translateX(20px);
+    transform: translateX(1.25rem); 
 }
 /* STICKY NAV */
 
 #persistent-nav {
     grid-area: nav;
     position: sticky;
-    color: var(--bg-primary);
     top: 0;
     z-index: 1000;
     margin: 0;
     padding-top: 1rem;
+    padding-right: 1rem;
     padding-bottom: 0;
     display: flex;
     justify-content: flex-end;
@@ -934,7 +926,8 @@ ul {
 
 /* TITLE */
 .project-title {
-    font-family: var(--font-body);
+    font-family: var(--font-header);
+    color: var(--text-heading);
     margin-top: 0.75rem;
     font-size: 1.1rem;
     font-weight: 500;
